--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.springframework</groupId>
-    <artifactId>gs-spring-boot</artifactId>
+    <groupId>org.engelsbogen</groupId>
     <version>0.1.0</version>
 
     <parent>
@@ -41,10 +40,39 @@
     	<version>2.0.13</version>
     	<type>jar</type>
     </dependency>
+
+    <dependency>
+    	<groupId>javax.xml.bind</groupId>
+    	<artifactId>jaxb-api</artifactId>
+    </dependency>
+    <dependency>
+    	<groupId>com.googlecode.json-simple</groupId>
+    	<artifactId>json-simple</artifactId>
+    </dependency>
+    <dependency>
+    	<groupId>com.google.api-client</groupId>
+    	<artifactId>google-api-client</artifactId>
+    	<version>1.26.0</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.google.oauth-client</groupId>
+    	<artifactId>google-oauth-client</artifactId>
+    	<version>1.27.0</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.google.apis</groupId>
+    	<artifactId>google-api-services-drive</artifactId>
+    	<version>v3-rev136-1.25.0</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.google.oauth-client</groupId>
+    	<artifactId>google-oauth-client-jetty</artifactId>
+    	<version>1.27.0</version>
+    </dependency>
     </dependencies>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>1.10</java.version>
     </properties>
 
 
@@ -53,8 +81,30 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<executable>true</executable>
+				</configuration>
             </plugin>
+
+           <!-- Somehow I need to get Spring to serve the front end files from ./public, ./build 
+                application.properties is used to set the static paths to classpath:/build classpath:/public
+                Here I force the MANIFEST file to have a Class-Path entry (otherwise its not set, but somehow
+                the jars are all automatically added anyway)
+                -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifestEntries>
+							<Class-Path>./</Class-Path>
+						</manifestEntries>
+					</archive>
+				</configuration>
+			</plugin>
+		            
         </plugins>
     </build>
 
+    <artifactId>nuskin-order-manager</artifactId>
 </project>
