--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://Q190:3306/Nuskin?useSSL=false
+#spring.datasource.url=jdbc:mysql://Q190:3306/Nuskin?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/Nuskin?useSSL=false
 spring.datasource.username=adc
 spring.datasource.password=letmein
 spring.resources.static-locations=classpath:/build,classpath:/public,classpath:/static
