--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,6 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost/Nuskin2018?useSSL=false
 spring.datasource.username=adc
 spring.datasource.password=letmein
-
-
-
 spring.resources.static-locations=classpath:/build,classpath:/public,classpath:/static
+
+logging.file=/var/log/nuskin-order-manager.log
