--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost/Nuskin?useSSL=false
 spring.datasource.url=jdbc:mysql://localhost/Nuskin2018?useSSL=false
 spring.datasource.username=adc
