--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.5.RELEASE</version>
+        <version>2.1.4.RELEASE</version>
+<!--         <version>2.0.5.RELEASE</version> -->
     </parent>
 
     <dependencies>
@@ -48,6 +49,7 @@
     <dependency>
     	<groupId>com.googlecode.json-simple</groupId>
     	<artifactId>json-simple</artifactId>
+    	<version>1.1.1</version>
     </dependency>
     <dependency>
     	<groupId>com.google.api-client</groupId>
