--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost/Nuskin?useSSL=false
-spring.datasource.url=jdbc:mysql://localhost/Nuskin2018?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/Nuskin2018?useSSL=false&serverTimezone=AST
 spring.datasource.username=adc
 spring.datasource.password=letmein
 spring.resources.static-locations=classpath:/build,classpath:/public,classpath:/static
