--- a/src/main/resources/tenants/nuskin2018.properties
+++ b/src/main/resources/tenants/nuskin2018.properties
@@ -1,4 +1,4 @@
 name=nuskin2018
-datasource.url=jdbc:mysql://localhost:3306/Nuskin2018?useSSL=false
+datasource.url=jdbc:mysql://localhost:3306/Nuskin2018?useSSL=false&serverTimezone=AST
 datasource.username=adc
 datasource.password=letmein
