--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,10 @@
     	<artifactId>mysql-connector-java</artifactId>
     	<scope>runtime</scope>
     </dependency>
-    
+	<dependency>
+	    <groupId>org.apache.derby</groupId>
+	    <artifactId>derby</artifactId>
+	</dependency>    
     
     <dependency>
     	<groupId>org.springframework.boot</groupId>
@@ -76,7 +79,9 @@
     	<artifactId>spring-boot-configuration-processor</artifactId>
     	<optional>true</optional>
     </dependency>
+
     </dependencies>
+
 
     <properties>
         <java.version>1.10</java.version>
