--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost/Nuskin2018?useSSL=false&serverTimezone=AST
 spring.datasource.username=adc
 spring.datasource.password=letmein
-spring.resources.static-locations=classpath:/build,classpath:/public,classpath:/static
+spring.resources.static-locations=classpath:/build,classpath:/public,classpath:/dist/angular-nuskin-database
 
 logging.file=/var/log/nuskin-order-manager.log
